--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "bin": {
     "gitrain": "./bin/index.js"
   },
+  "files": [
+    "bin",
+    "src"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node bin/index.js"
